--- a/client/src/assets/base.css
+++ b/client/src/assets/base.css
@@ -1,3 +1,7 @@
+@import 'coffeebrew_vue_components/public/fontawesome/css/fontawesome.min.css';
+@import 'coffeebrew_vue_components/public/fontawesome/css/brands.min.css';
+@import 'coffeebrew_vue_components/public/fontawesome/css/solid.min.css';
+
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
   --vt-c-white: #ffffff;
