--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -35,10 +35,10 @@ a {
   align-items: center;
   justify-content: center;
   font-size: 0.6rem;
-  width: 150px;
   height: 20px;
   text-align: center;
   margin: 4px;
+  padding: 8px;
   border: 1px solid var(--color-border);
   border-radius: 4px;
   background-color: var(--color-border-hover);
