--- a/config_app/styles.css
+++ b/config_app/styles.css
@@ -43,6 +43,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  width: 80vw;
 }
 
 .actions {
@@ -58,11 +59,20 @@ body {
 
 .input-label {
   font-weight: 600;
+  width: 20%;
 }
 
 .input-field {
   display: flex;
   flex-direction: column;
+  gap: 0.5rem;
+  width: 80%;
+}
+
+.input-value {
+  display: flex;
+  gap: 0.5rem;
+  width: 100%;
 }
 
 .input-hint {
@@ -75,7 +85,7 @@ input {
   border-radius: 4px;
   border: 1px solid var(--color-border);
   outline: none;
-  width: 600px;
+  width: 80%;
 }
 
 button {
@@ -83,4 +93,8 @@ button {
   border-radius: 4px;
   border: 1px solid var(--color-border);
   outline: none;
+}
+
+button:hover {
+  cursor: pointer;
 }
