Generalize oneline row table

--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -20,6 +20,14 @@ a {
   transition: 0.4s;
 }
 
+strong {
+  font-weight: 600;
+}
+
+.heading {
+  font-weight: 900;
+}
+
 .divider {
   border-bottom: 1px solid var(--color-border);
 }
