--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -11,7 +11,9 @@
 .content-container {
   display: flex;
   flex-direction: column;
+  margin: 0 auto;
   padding: 1rem;
+  max-width: 80vw;
 }
 
 a {
